--- a/index.html
+++ b/index.html
@@ -9974,15 +9974,15 @@ var _user$project$Game_Model$Table = F4(
 	function (a, b, c, d) {
 		return {pos1: a, pos2: b, pos3: c, pos4: d};
 	});
-var _user$project$Game_Model$GameInfo = function (a) {
-	return {ctor: 'GameInfo', _0: a};
-};
 var _user$project$Game_Model$Players = function (a) {
 	return {ctor: 'Players', _0: a};
 };
-var _user$project$Models$Model = F5(
-	function (a, b, c, d, e) {
-		return {mode: a, game: b, windowSize: c, player: d, gameId: e};
+var _user$project$Game_Model$GameInfo = function (a) {
+	return {ctor: 'GameInfo', _0: a};
+};
+var _user$project$Models$Model = F6(
+	function (a, b, c, d, e, f) {
+		return {mode: a, game: b, games: c, windowSize: d, player: e, gameId: f};
 	});
 var _user$project$Models$Lobby = function (a) {
 	return {ctor: 'Lobby', _0: a};
@@ -10005,6 +10005,7 @@ var _user$project$Models$Changing = function (a) {
 var _user$project$Models$initialModel = {
 	mode: _user$project$Models$Init,
 	game: _elm_lang$core$Maybe$Nothing,
+	games: _elm_lang$core$Maybe$Nothing,
 	windowSize: A2(_elm_lang$window$Window$Size, 0, 0),
 	gameId: _elm_lang$core$Maybe$Nothing,
 	player: _user$project$Models$Changing('')
@@ -10015,6 +10016,9 @@ var _user$project$Msgs$SizeUpdated = function (a) {
 var _user$project$Msgs$LobbyUpdate = function (a) {
 	return {ctor: 'LobbyUpdate', _0: a};
 };
+var _user$project$Msgs$GameUpdate = function (a) {
+	return {ctor: 'GameUpdate', _0: a};
+};
 var _user$project$Msgs$GameIdUpdate = function (a) {
 	return {ctor: 'GameIdUpdate', _0: a};
 };
@@ -10022,8 +10026,8 @@ var _user$project$Msgs$FetchGame = F2(
 	function (a, b) {
 		return {ctor: 'FetchGame', _0: a, _1: b};
 	});
-var _user$project$Msgs$GameUpdate = function (a) {
-	return {ctor: 'GameUpdate', _0: a};
+var _user$project$Msgs$InitUpdate = function (a) {
+	return {ctor: 'InitUpdate', _0: a};
 };
 var _user$project$Msgs$PlayerChange = function (a) {
 	return {ctor: 'PlayerChange', _0: a};
@@ -10146,15 +10150,47 @@ var _user$project$Encoders$encodeLobby = function (player) {
 				}
 			}));
 };
-var _user$project$Commands$fetchLobby = function (players) {
-	var _p0 = _elm_lang$core$List$head(players);
-	if (_p0.ctor === 'Nothing') {
+var _user$project$Encoders$encodeInit = function (player) {
+	return _user$project$Encoders$encodeObject(
+		_elm_lang$core$Json_Encode$object(
+			{
+				ctor: '::',
+				_0: {
+					ctor: '_Tuple2',
+					_0: 'mode',
+					_1: _elm_lang$core$Json_Encode$string('init')
+				},
+				_1: {
+					ctor: '::',
+					_0: {
+						ctor: '_Tuple2',
+						_0: 'player',
+						_1: _elm_lang$core$Json_Encode$string(player)
+					},
+					_1: {ctor: '[]'}
+				}
+			}));
+};
+var _user$project$Commands$fetchGames = function (iPlayer) {
+	var _p0 = iPlayer;
+	if (_p0.ctor === 'Changing') {
 		return _elm_lang$core$Platform_Cmd$none;
 	} else {
 		return A2(
 			_elm_lang$websocket$WebSocket$send,
 			_user$project$Globals$serverUrl,
-			_user$project$Encoders$encodeLobby(_p0._0));
+			_user$project$Encoders$encodeInit(_p0._0));
+	}
+};
+var _user$project$Commands$fetchLobby = function (players) {
+	var _p1 = _elm_lang$core$List$head(players);
+	if (_p1.ctor === 'Nothing') {
+		return _elm_lang$core$Platform_Cmd$none;
+	} else {
+		return A2(
+			_elm_lang$websocket$WebSocket$send,
+			_user$project$Globals$serverUrl,
+			_user$project$Encoders$encodeLobby(_p1._0));
 	}
 };
 var _user$project$Commands$fetchWatch = F3(
@@ -10257,17 +10293,22 @@ var _user$project$Decoders$playersDecoder = A2(
 	_elm_lang$core$Json_Decode$map,
 	_user$project$Game_Model$Players,
 	_elm_lang$core$Json_Decode$list(_user$project$Decoders$playerDecoder));
-var _user$project$Decoders$gameIdDecoder = A2(_elm_lang$core$Json_Decode$map, _user$project$Game_Model$GameInfo, _elm_lang$core$Json_Decode$string);
+var _user$project$Decoders$gameIdDecoder = A3(
+	_NoRedInk$elm_decode_pipeline$Json_Decode_Pipeline$required,
+	'gameId',
+	_elm_lang$core$Json_Decode$string,
+	_NoRedInk$elm_decode_pipeline$Json_Decode_Pipeline$decode(_user$project$Game_Model$GameInfo));
 var _user$project$Decoders$lobbyDecoder = _elm_lang$core$Json_Decode$oneOf(
 	{
 		ctor: '::',
-		_0: _user$project$Decoders$playersDecoder,
+		_0: _user$project$Decoders$gameIdDecoder,
 		_1: {
 			ctor: '::',
-			_0: _user$project$Decoders$gameIdDecoder,
+			_0: _user$project$Decoders$playersDecoder,
 			_1: {ctor: '[]'}
 		}
 	});
+var _user$project$Decoders$gameIdsDecoder = _elm_lang$core$Json_Decode$list(_elm_lang$core$Json_Decode$string);
 var _user$project$Game_Translate$isEqual = F2(
 	function (a, b) {
 		return _elm_lang$core$Native_Utils.eq(
@@ -10983,13 +11024,24 @@ var _user$project$Game_Play_Game$init = A2(
 			}),
 		_1: {ctor: '[]'}
 	});
+var _user$project$Game_Update$decodeInit = function (gamesString) {
+	return A2(_elm_lang$core$Json_Decode$decodeString, _user$project$Decoders$gameIdsDecoder, gamesString);
+};
+var _user$project$Game_Update$updateInit = function (gamesString) {
+	var _p0 = _user$project$Game_Update$decodeInit(gamesString);
+	if (_p0.ctor === 'Err') {
+		return _elm_lang$core$Maybe$Nothing;
+	} else {
+		return _elm_lang$core$Maybe$Just(_p0._0);
+	}
+};
 var _user$project$Game_Update$decodeLobby = function (lobbyString) {
 	return A2(_elm_lang$core$Json_Decode$decodeString, _user$project$Decoders$lobbyDecoder, lobbyString);
 };
 var _user$project$Game_Update$updateLobby = function (lobbyString) {
-	var _p0 = _user$project$Game_Update$decodeLobby(lobbyString);
-	if (_p0.ctor === 'Ok') {
-		return _elm_lang$core$Maybe$Just(_p0._0);
+	var _p1 = _user$project$Game_Update$decodeLobby(lobbyString);
+	if (_p1.ctor === 'Ok') {
+		return _elm_lang$core$Maybe$Just(_p1._0);
 	} else {
 		return _elm_lang$core$Maybe$Nothing;
 	}
@@ -10998,9 +11050,9 @@ var _user$project$Game_Update$decodeGame = function (gameString) {
 	return A2(_elm_lang$core$Json_Decode$decodeString, _user$project$Decoders$gameDecoder, gameString);
 };
 var _user$project$Game_Update$updateGame = function (gameString) {
-	var _p1 = _user$project$Game_Update$decodeGame(gameString);
-	if (_p1.ctor === 'Ok') {
-		return _elm_lang$core$Maybe$Just(_p1._0);
+	var _p2 = _user$project$Game_Update$decodeGame(gameString);
+	if (_p2.ctor === 'Ok') {
+		return _elm_lang$core$Maybe$Just(_p2._0);
 	} else {
 		return _elm_lang$core$Maybe$Nothing;
 	}
@@ -11804,7 +11856,7 @@ var _user$project$Updates$playerChange = F2(
 				_0: _elm_lang$core$Native_Utils.update(
 					model,
 					{player: pl}),
-				_1: _elm_lang$core$Platform_Cmd$none
+				_1: _user$project$Commands$fetchGames(pl)
 			};
 		}
 	});
@@ -11884,6 +11936,15 @@ var _user$project$Updates$update = F2(
 				};
 			case 'LobbyUpdate':
 				return A2(_user$project$Updates$lobbyUpdate, model, _p17._0);
+			case 'InitUpdate':
+				var mGames = _user$project$Game_Update$updateInit(_p17._0);
+				return {
+					ctor: '_Tuple2',
+					_0: _elm_lang$core$Native_Utils.update(
+						model,
+						{games: mGames}),
+					_1: _elm_lang$core$Platform_Cmd$none
+				};
 			default:
 				return {
 					ctor: '_Tuple2',
@@ -11988,8 +12049,8 @@ var _user$project$View$newInput = function (s) {
 	return _user$project$Msgs$PlayerChange(
 		_user$project$Msgs$Update(s));
 };
-var _user$project$View$init = F2(
-	function (iPlayer, mGameId) {
+var _user$project$View$init = F3(
+	function (iPlayer, mGameId, mGameIds) {
 		var _p0 = iPlayer;
 		if (_p0.ctor === 'Changing') {
 			return A2(
@@ -12032,88 +12093,67 @@ var _user$project$View$init = F2(
 					}
 				});
 		} else {
-			var _p2 = _p0._0;
-			var _p1 = mGameId;
+			var _p4 = _p0._0;
+			var _p1 = mGameIds;
 			if (_p1.ctor === 'Nothing') {
 				return A2(
 					_elm_lang$html$Html$div,
 					{ctor: '[]'},
 					{
 						ctor: '::',
-						_0: A2(_user$project$View$playBtn, 'Play New Game', _p2),
-						_1: {
-							ctor: '::',
-							_0: A3(_user$project$View$watchBtn, 'Watch Previous Game', '0', _p2),
-							_1: {
-								ctor: '::',
-								_0: _user$project$View$slct(
-									{
-										ctor: '::',
-										_0: '0',
-										_1: {
-											ctor: '::',
-											_0: '1',
-											_1: {
-												ctor: '::',
-												_0: '2',
-												_1: {
-													ctor: '::',
-													_0: '3',
-													_1: {ctor: '[]'}
-												}
-											}
-										}
-									}),
-								_1: {ctor: '[]'}
-							}
-						}
+						_0: A2(_user$project$View$playBtn, 'Play New Game', _p4),
+						_1: {ctor: '[]'}
 					});
 			} else {
-				return A2(
-					_elm_lang$html$Html$div,
-					{ctor: '[]'},
-					{
-						ctor: '::',
-						_0: A2(_user$project$View$playBtn, 'Play New Game', _p2),
-						_1: {
+				var _p3 = _p1._0;
+				var _p2 = mGameId;
+				if (_p2.ctor === 'Nothing') {
+					return A2(
+						_elm_lang$html$Html$div,
+						{ctor: '[]'},
+						{
 							ctor: '::',
-							_0: A3(_user$project$View$watchBtn, 'Watch Previous Game', _p1._0, _p2),
+							_0: A2(_user$project$View$playBtn, 'Play New Game', _p4),
 							_1: {
 								ctor: '::',
-								_0: _user$project$View$slct(
-									{
-										ctor: '::',
-										_0: '0',
-										_1: {
-											ctor: '::',
-											_0: '1',
-											_1: {
-												ctor: '::',
-												_0: '2',
-												_1: {
-													ctor: '::',
-													_0: '3',
-													_1: {ctor: '[]'}
-												}
-											}
-										}
-									}),
-								_1: {ctor: '[]'}
+								_0: A3(_user$project$View$watchBtn, 'Watch Previous Game', '0', _p4),
+								_1: {
+									ctor: '::',
+									_0: _user$project$View$slct(_p3),
+									_1: {ctor: '[]'}
+								}
 							}
-						}
-					});
+						});
+				} else {
+					return A2(
+						_elm_lang$html$Html$div,
+						{ctor: '[]'},
+						{
+							ctor: '::',
+							_0: A2(_user$project$View$playBtn, 'Play New Game', _p4),
+							_1: {
+								ctor: '::',
+								_0: A3(_user$project$View$watchBtn, 'Watch Previous Game', _p2._0, _p4),
+								_1: {
+									ctor: '::',
+									_0: _user$project$View$slct(_p3),
+									_1: {ctor: '[]'}
+								}
+							}
+						});
+				}
 			}
 		}
 	});
 var _user$project$View$page = function (model) {
-	var _p3 = model.mode;
-	switch (_p3.ctor) {
+	var _p5 = model.mode;
+	switch (_p5.ctor) {
 		case 'Init':
-			return A2(_user$project$View$init, model.player, model.gameId);
+			return A3(_user$project$View$init, model.player, model.gameId, model.games);
 		case 'Play':
 			return _user$project$Game_View$viewPlay(model.game);
 		case 'Lobby':
-			return _user$project$Game_View$viewLobby(_p3._0);
+			return _user$project$Game_View$viewLobby(_p5._0);
 		default:
 			return _user$project$Game_View$viewWatch(model.game);
 	}
@@ -12170,7 +12210,7 @@ var _user$project$Subscriptions$webSocketSubscripiton = function (model) {
 	var _p0 = model.mode;
 	switch (_p0.ctor) {
 		case 'Init':
-			return _elm_lang$core$Platform_Sub$none;
+			return A2(_elm_lang$websocket$WebSocket$listen, _user$project$Globals$serverUrl, _user$project$Msgs$InitUpdate);
 		case 'Play':
 			return A2(_elm_lang$websocket$WebSocket$listen, _user$project$Globals$serverUrl, _user$project$Msgs$GameUpdate);
 		case 'Lobby':
